# grr-plugin

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
scripts/: build.rs  update-proto.sh
src/: body.rs  controller.rs  error.rs  grpc_broker.rs  grpc_broker_service.rs  grpc_controller.rs  grpc_stdio.rs  json_rpc_broker.rs  json_rpc_client.rs  json_rpc_server.rs  lib.rs  plugin.rs  unique_port.rs  unix.rs
