[package]
name = "grr-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Archis Gore <me@archisgore.com>"]
description = "A Rust-based go-plugin implementation, to allow Rust plugins into Go programs."
readme = "README.md"
license = "Apache-2.0"
keywords = ["go-plugin", "golang", "hashicorp", "grpc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
tonic-health = "0.5"
portpicker = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
tempfile = "3.3"
tower = "0.4"
http = "0.2"
hyper = "0.14"
