[package]
name = "grr-plugin"
version = "0.1.4"
edition = "2021"
authors = ["Archis Gore <me@archisgore.com>"]
description = "A Rust-based go-plugin implementation, to allow Rust plugins into Go programs."
readme = "README.md"
license = "Apache-2.0"
keywords = ["go-plugin", "golang", "hashicorp", "grpc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
tonic-health = "0.5"
portpicker = "0.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4"
tempfile = "3.3"
tower = "0.4"
http = "0.2"
hyper = "0.14"
http-body = "0.4"
bytes = "1.1.0"
pin-project = "1.0"
futures = "0.3.19"
prost = "0.9"
prost-types = "0.9"
async-stream = "0.3.2"
triggered = "0.1.2"
gag = "1.0"
tokio-stream = "0.1.8"
jsonrpc-http-server = "18.0.0"
jsonrpc-core-client = "18.0.0"
async-recursion = "1.0.0"

[dev-dependencies]
assert_matches = "1.5.0"

[build-dependencies]
tonic-build = "0.6"